--- a/WebApp/ClientApp/package.json
+++ b/WebApp/ClientApp/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "babel-eslint": "10.0.1",
     "bootstrap": "^4.1.3",
     "jquery": "^3.4.1",
@@ -14,7 +15,8 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "^3.0.1",
     "reactstrap": "^6.3.0",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
     "ajv": "^6.9.1",
